--- a/lib/RSA/CMakeLists.txt
+++ b/lib/RSA/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 2.8)
 project(RSA)
 
 set(SOURCES
+    src/cleanup_keys.sh
+    src/generate_keys.sh 
 	src/bignum.cpp
     src/normal_bignum.cpp
     src/RSA.cpp
